Ajout de la commande evaluate